# turtlebro_extra

./: README.md
turtlebro_actions/: CMakeLists.txt  README.md  package.xml
turtlebro_actions/Arduino/ServoControl/: ServoControl.ino
turtlebro_actions/action/: Move.action  Rotation.action
turtlebro_actions/launch/: action_servers.launch  radio.launch
turtlebro_actions/src/: commands_controller.py  move_client.py  move_server.py  photo_service.py  radio.py  rotate_client.py  rotate_server.py  servo_client.py  video_client.py
turtlebro_actions/srv/: Photo.srv
turtlebro_actions/stuff/vscode/: tasks.json
turtlebro_aruco/: CMakeLists.txt  package.xml
turtlebro_aruco/launch/: aruco_service.launch
turtlebro_aruco/msg/: Aruco.msg
turtlebro_aruco/src/: aruco_service.py  aruco_topic.py
turtlebro_aruco/srv/: ArucoDetect.srv
turtlebro_delivery/: CMakeLists.txt  README.md  package.xml
turtlebro_delivery/arduino/delivery/: delivery.ino
turtlebro_delivery/data/: delivery.toml  speech.toml
turtlebro_delivery/launch/: delivery.launch  delivery_speech.launch  deps.launch
turtlebro_delivery/src/: config.py  delivery.py  delivery_devices.py  delivery_speech.py  speech_client.py
turtlebro_excursions/: CMakeLists.txt  README.md  package.xml
turtlebro_excursions/arduino/amg88xx_lm_main/: amg88xx_lm_main.ino
turtlebro_excursions/data/: aruco_text.toml  goals.toml
turtlebro_excursions/launch/: excursion.launch  excursion_aruco.launch  heat_excursion_aruco.launch
turtlebro_excursions/src/: aruco_speech.py  heat_speaker.py  point_aruco.py
turtlebro_extra/: CMakeLists.txt  package.xml
turtlebro_overheat_sensor/: CMakeLists.txt  package.xml  readme.md
turtlebro_overheat_sensor/launch/: heat_sensor.launch
turtlebro_overheat_sensor/msg/: HeatAlert.msg
turtlebro_overheat_sensor/src/: overheat_sensor.py
turtlebro_patrol/: CMakeLists.txt  README.md  package.xml
turtlebro_patrol/data/: goals.toml
turtlebro_patrol/launch/: navigation_slam.launch  patrol.launch  patrol_run.launch
turtlebro_patrol/src/: patrol.py
turtlebro_py/: CMakeLists.txt  README.md  package.xml  setup.py
turtlebro_py/ino/: turtlebro_py.ino
turtlebro_py/src/: __init__.py  turtlebro_py copy.py  turtlebro_py.py
turtlebro_searcher/: CMakeLists.txt  README.md  package.xml
turtlebro_searcher/data/: aruco_text.toml  goals.toml
turtlebro_searcher/launch/: searcher_aruco.launch
turtlebro_searcher/src/: point_aruco.py  point_speech.py
turtlebro_speech/: CMakeLists.txt  README.md  package.xml
turtlebro_speech/launch/: speech_service.launch
turtlebro_speech/services/: festival.service
turtlebro_speech/src/: speech_client.py  speech_service.py
(+2 files in other folders)
